--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:layout_margin="15dp">
-
+    tools:context=".SecondActivity"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +25,6 @@
             android:inputType="text"
             android:hint="id" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,40 +41,32 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:inputType="text"
-            android:hint="Name" />
+            android:hint="name" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/tvYourId"
+            android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Your Id:" />
-        <TextView
-            android:id="@+id/tvYourIdOutput"
+            android:text="Enter Email" />
+
+        <EditText
+            android:id="@+id/etEmail"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="" />
+            android:ems="10"
+            android:inputType="text"
+            android:hint="email" />
     </LinearLayout>
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tvYourName"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Your Name" />
-        <TextView
-            android:id="@+id/tvYourNameOutput"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="" />
-    </LinearLayout>
+        android:layout_height="400dp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -99,11 +88,17 @@
             android:text="View" />
 
         <Button
-            android:id="@+id/btnClear"
+            android:id="@+id/btnUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Clear" />
-    </LinearLayout>
+            android:text="Update" />
 
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Delete" />
+    </LinearLayout>
 </LinearLayout>
