--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Clear" />
+
+        <Button
+            android:id="@+id/btnSecondActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Go to Next" />
     </LinearLayout>
 
 </LinearLayout>
